package edu.fiuba.algo3.modelo;

public interface IVisita {
    public IVisita recibirVisita(Policia policia);
}
