@startuml

    interface IVisita
    {
        + {abstract} recibirVisita(policia:Policia): IVisita
    }
    class PrimeraVisita
    {
        - demora:Int
        + recibirVisita(policia:Policia): SegundaVisita
    }
    class SegundaVisita
    {
        - demora:Int
        + recibirVisita(policia:Policia): TerceraVisita
    }
    class TerceraVisita
    {
        - demora:Int
        + recibirVisita(policia:Policia): TerceraVisita
    }


    IVisita <|..SegundaVisita
    IVisita <|..TerceraVisita
    IVisita <|..PrimeraVisita
@enduml